--- a/view/components/admin/editor/edit/meta/meta.html
+++ b/view/components/admin/editor/edit/meta/meta.html
@@ -31,7 +31,7 @@
 <div class="ui basic segment">  
     <div class="ui ten wide grid">
         <div class="ten wide column" id="meta_tags_content">
-            {{  component('editor::admin.editor.edit.meta.form',{                
+            {{  component('email::admin.editor.edit.meta.form',{                
                     language: language,
                     theme_component: theme_component,
                     theme_name: theme_name
