--- a/view/components/admin/editor/content/content.html
+++ b/view/components/admin/editor/content/content.html
@@ -2,7 +2,7 @@
     <div class="ui divided grid h-full">
         <div class="row">
             <div class="three wide column" id="edit_items">     
-                {{ component('editor::admin.editor.content.components',{ theme_name: theme_name, class: 'relaxed' }) }}
+                {{ component('email::admin.editor.content.emails',{ theme_name: theme_name, class: 'relaxed' }) }}
             </div>
             <div class="thirteen wide column" id="edit_file">                
             </div>
