--- a/view/components/admin/editor/edit/code/code.html
+++ b/view/components/admin/editor/edit/code/code.html
@@ -14,7 +14,7 @@
         {% endif %}
         <div class="float-right">
             <div class="ui basic label">
-                <i class="icon blue code"></i>
+                <i class="icon blue email outline"></i>
                 {{ theme_component }}
             </div>
         </div>           
@@ -29,7 +29,7 @@
     </div>
 </div>
 <div class="">
-    {{  component('editor::admin.editor.edit.code.form',{
+    {{  component('email::admin.editor.edit.code.form',{
             theme: theme_name,
             component_name: theme_component,
             type: type
