--- a/view/components/admin/editor/edit/edit.html
+++ b/view/components/admin/editor/edit/edit.html
@@ -1,5 +1,5 @@
-<div class="ui stackable tabular menu file-edit-tabs">
-    <div class="item link active edit-file-tab-item" 
+<div class="ui stackable tabular menu file-edit-tabs">   
+    <div class="item active link edit-file-tab-item" 
         component="email::admin.editor.edit.code" 
         theme_component="{{ component_name }}" 
         theme_name="{{ theme_name }}"
@@ -8,7 +8,7 @@
         {{ labels.code }}     
     </div>      
 </div>     
-<div class="ui active tab" id="file_edit_content">             
+<div class="ui active tab" id="file_edit_content">                 
     {{  component('email::admin.editor.edit.code',{ 
             type: type,           
             theme_component: component_name,
