--- a/view/components/admin/editor/content/content.html
+++ b/view/components/admin/editor/content/content.html
@@ -1,4 +1,4 @@
-<div class="ui very basic segment" style="height:80vh">
+<div class="ui very basic segment">
     <div class="ui divided grid h-full">
         <div class="row">
             <div class="three wide column" id="edit_items">     
