--- a/view/components/admin/editor/edit/code/form/form.html
+++ b/view/components/admin/editor/edit/code/form/form.html
@@ -1,6 +1,6 @@
 <div id="file_content">
     <div class="ui active blue centered loader" id="code_loader"></div>
-    <form class="h-full w-full" method="POST" id="file_content_form">  
+    <form class="w-full h-full" method="POST" id="file_content_form">  
         <input type="hidden" name="theme" value="{{ theme }}" id="theme">
         <input type="hidden" name="component" value="{{ component_name }}" id="component_name">
         <input type="hidden" name="type" value="{{ type }}" id="type">
