--- a/view/components/admin/admin.html
+++ b/view/components/admin/admin.html
@@ -3,7 +3,7 @@
     ] 
 %}
 
-{{  component('components:tabs',{ 
+{{  component('semantic~tabs',{ 
         items: items,
         menu: { extension: 'email' },
         content: { component: 'email::admin.editor' } 
