--- a/view/components/admin/editor/preview/preview.html
+++ b/view/components/admin/editor/preview/preview.html
@@ -1,7 +1,7 @@
 <div class="ui horizontal segments">
     <div class="ui segment">
         <h4 class="flex flex-row items-center">
-            <button class="ui primary icon button mini circular preview-email" title="{{ labels.preview }}">
+            <button class="ui primary icon button mini preview-email" title="{{ labels.preview }}">
                 <i class="icon sync"></i>               
             </button>
             <span class="px-2 font-bold">{{ title }}</span>
